# PnC

./: README.md
ADE/: CMakeLists.txt  DracoSim.cpp  DracoSim.hpp  DracoWrapper.cpp  DracoWrapper.hpp
Addition/DataManager/: CMakeLists.txt
Addition/PythonPlotter/Scorpio/: plot_ee_ori_gazebo.py
Config/Scorpio/: INTERFACE.yaml  SIMULATION.yaml
Config/Scorpio/TEST/: GRASPING_TEST.yaml  OSC_TEST.yaml
PnC/: Test.hpp
PnC/DracoPnC/CtrlSet/: DoubleSupportCtrl.cpp  SingleSupportCtrl.cpp  SingleSupportCtrl.hpp
PnC/DracoPnC/TaskSet/: SelectedJointTask.cpp
PnC/ScorpioPnC/: ScorpioDefinition.hpp  ScorpioInterface.cpp  ScorpioInterface.hpp  ScorpioStateProvider.cpp  ScorpioStateProvider.hpp
PnC/ScorpioPnC/CtrlSet/: GripperCtrl.cpp  GripperCtrl.hpp  OSCCtrl.cpp  OSCCtrl.hpp  OSCPosCtrl.cpp  OSCPosCtrl.hpp
PnC/ScorpioPnC/TestSet/: GraspingTest.cpp  GraspingTest.hpp  OSCTest.cpp  OSCTest.hpp
PnC/WBC/: BasicTask.cpp  OSC.cpp
PnC/WBC/WBLC/: KinWBC.cpp
RobotModel/Robot/Scorpio/: Scorpio_Kin.urdf  Scorpio_Kin_robotiq _fixedpassive.urdf  Scorpio_Kin_robotiq.urdf  Scorpio_Kin_robotiq_four_bar.urdf  Scorpio_Kin_robotiq_gripper.urdf
Simulator/Dart/Scorpio/: CMakeLists.txt  Main.cpp  ScorpioWorldNode.cpp  ScorpioWorldNode.hpp
Utils/Math/: pseudo_inverse.cpp
